<resources>
    <string name="app_name">SemiMiner for AEON</string>
    <string name="pool_website">(Getting started for beginners at https://aeon.semipool.com)</string>
    <string name="wallet_website">Offline AEON wallet at https://moneroaddress.org</string>
    <string name="mining_pool_address">Mining URL</string>
    <string name="workerID_support">(select workerID only if pool supports it in pass field)</string>
    <string name="username">MinerAndroidAEON</string>
    <string name="cmdline">Cmdline</string>
    <string name="start">Start</string>
    <string name="help">Help</string>
    <string name="cmd">Cmd</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="threads"> Cores</string>
    <string name="max_cpu_usage">-</string>
    <string name="percent">%</string>
    <string name="hpers"> H/s, </string>
    <string name="accepted"> accepted</string>
    <string name="cpus"> CPUs , limit = total - 1</string>
    <string name="use_worker_id">WorkerID</string>
</resources>
